syntax = "proto3";
package api;
option go_package = ".;api";

service Customer {
    rpc AddCustomer (AddCustomerRequest) returns (AddCustomerReply){}
}

message Address {
    string street = 1;
    uint32 house_number = 2;
    uint32 zip = 3;
    string city = 4;
    string country = 5;
}

message AddCustomerRequest {
    string name = 1;
    Address address = 2;
}

message AddCustomerReply {

}
